force-app/main/default/objects/ScenarioMessageElement__c/ScenarioMessageElement__c.object-meta.xml
<CustomObject>
    <description>The scenario elements complement the message depending on the record type
 Each record type uses it&apos;s specific attributes</description>
    <label>ScenarioMessageElement</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScenarioMessageElements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>