force-app/main/default/objects/ScenarioMessageElement__c/fields/badge_Style__c.field-meta.xml
<CustomField>
    <fullName>badge_Style__c</fullName>
    <label>badge_Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>neutral</fullName>
                <default>true</default>
                <label>neutral</label>
            </value>
            <value>
                <fullName>brand</fullName>
            </value>
            <value>
                <fullName>outline-brand</fullName>
            </value>
            <value>
                <fullName>destructive</fullName>
            </value>
            <value>
                <fullName>text-destructive</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>