force-app/main/default/objects/ScenarioMessageElement__c/fields/badge_Title__c.field-meta.xml
<CustomField>
    <fullName>badge_Title__c</fullName>
    <label>badge_Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>