force-app/main/default/objects/ScenarioMessageElement__c/fields/button_Flow__c.field-meta.xml
<CustomField>
    <fullName>button_Flow__c</fullName>
    <description>The flow to be executed when the button is clicked</description>
    <inlineHelpText>The flow API name to be executed when the button is clicked. (Prevent redirection)</inlineHelpText>
    <label>button_Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>