force-app/main/default/objects/ScenarioMessageElement__c/fields/button_Text__c.field-meta.xml
<CustomField>
    <fullName>button_Text__c</fullName>
    <defaultValue>&quot;Label&quot;</defaultValue>
    <inlineHelpText>The button label</inlineHelpText>
    <label>button_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>