force-app/main/default/objects/ScenarioMessageElement__c/fields/button_Url__c.field-meta.xml
<CustomField>
    <fullName>button_Url__c</fullName>
    <defaultValue>&quot;#&quot;</defaultValue>
    <inlineHelpText>The URL the user is redirected to (if button flow is empty)</inlineHelpText>
    <label>button_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>