force-app/main/default/objects/ScenarioMessageElement__c/fields/datatable_Table__c.field-meta.xml
<CustomField>
    <fullName>datatable_Table__c</fullName>
    <inlineHelpText>title1,title2,title3
value-a1,value-a2,value-a3
value-b1,value-b2,value-b3</inlineHelpText>
    <label>datatable_Table</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>