force-app/main/default/objects/ScenarioMessageElement__c/fields/html_Content__c.field-meta.xml
<CustomField>
    <fullName>html_Content__c</fullName>
    <description>https://www.lightningdesignsystem.com/components/overview/x</description>
    <inlineHelpText>You can define your own element here. Refer to the design system (https://www.lightningdesignsystem.com/components/overview/) to create Salesforce standard elements.</inlineHelpText>
    <label>html_Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>