force-app/main/default/objects/ScenarioMessageElement__c/fields/image_URL__c.field-meta.xml
<CustomField>
    <fullName>image_URL__c</fullName>
    <label>image_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>