force-app/main/default/objects/ScenarioMessageElement__c/fields/loading_Text__c.field-meta.xml
<CustomField>
    <fullName>loading_Text__c</fullName>
    <label>loading_Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>