force-app/main/default/objects/ScenarioMessageElement__c/fields/loading_TextAfter__c.field-meta.xml
<CustomField>
    <fullName>loading_TextAfter__c</fullName>
    <label>loading_TextAfter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>