force-app/main/default/objects/ScenarioMessageElement__c/fields/loading_Wait__c.field-meta.xml
<CustomField>
    <fullName>loading_Wait__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Wait time in milliseconds</inlineHelpText>
    <label>loading_Wait</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>