force-app/main/default/objects/ScenarioMessageElement__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <referenceTo>ScenarioMessage__c</referenceTo>
    <relationshipLabel>ScenarioMessageElements</relationshipLabel>
    <relationshipName>ScenarioMessageElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>