force-app/main/default/objects/ScenarioMessageElement__c/fields/redirection_actionName__c.field-meta.xml
<CustomField>
    <fullName>redirection_actionName__c</fullName>
    <inlineHelpText>Record: view, edit or clone
Object: list, new, tab</inlineHelpText>
    <label>redirection_actionName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>view</fullName>
            </value>
            <value>
                <fullName>edit</fullName>
            </value>
            <value>
                <fullName>clone</fullName>
            </value>
            <value>
                <fullName>list</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>