force-app/main/default/objects/ScenarioMessageElement__c/fields/redirection_objectApiName__c.field-meta.xml
<CustomField>
    <fullName>redirection_objectApiName__c</fullName>
    <inlineHelpText>Your object API Name (eg: Account)</inlineHelpText>
    <label>redirection_objectApiName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>