force-app/main/default/objects/ScenarioMessageElement__c/fields/redirection_pageName__c.field-meta.xml
<CustomField>
    <fullName>redirection_pageName__c</fullName>
    <label>redirection_ pageName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>home</fullName>
                <default>true</default>
                <label>home</label>
            </value>
            <value>
                <fullName>chatter</fullName>
            </value>
            <value>
                <fullName>today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>