force-app/main/default/objects/ScenarioMessageElement__c/fields/redirection_RecordId__c.field-meta.xml
<CustomField>
    <fullName>redirection_RecordId__c</fullName>
    <inlineHelpText>Set your record ID (EG: &apos;001xx000003NGaqAAG&apos;)</inlineHelpText>
    <label>redirection_RecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>