force-app/main/default/objects/ScenarioMessageElement__c/fields/redirection_Type__c.field-meta.xml
<CustomField>
    <fullName>redirection_Type__c</fullName>
    <description>Record Page - Navigate to a specific record page.
Object Page - Navigate to the home page of an object.
Named Page - Navigate to a named page, such as Home or Chatter.
Nav Item Page - Navigate to a custom tab.
External URL - Navigate to an external URL.</description>
    <inlineHelpText>Record Page - Navigate to a specific record page.
Object Page - Navigate to the home page of an object.
Named Page - Navigate to a named page, such as Home or Chatter.
Nav Item Page - Navigate to a custom tab.
External URL - Navigate to an external URL.</inlineHelpText>
    <label>redirection_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>recordPage</fullName>
            </value>
            <value>
                <fullName>objectPage</fullName>
            </value>
            <value>
                <fullName>namedPage</fullName>
            </value>
            <value>
                <fullName>navItemPage</fullName>
            </value>
            <value>
                <fullName>externalUrl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>