force-app/main/default/objects/ScenarioMessageElement__c/fields/tile_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>tile_Subtitle__c</fullName>
    <label>tile_Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>