force-app/main/default/objects/ScenarioMessageElement__c/fields/tile_SubtitleURL__c.field-meta.xml
<CustomField>
    <fullName>tile_SubtitleURL__c</fullName>
    <label>tile_SubtitleURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>