force-app/main/default/objects/ScenarioMessageElement__c/fields/tile_Text__c.field-meta.xml
<CustomField>
    <fullName>tile_Text__c</fullName>
    <label>tile_Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>