force-app/main/default/objects/ScenarioMessageElement__c/fields/tile_Title__c.field-meta.xml
<CustomField>
    <fullName>tile_Title__c</fullName>
    <label>tile_Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>