force-app/main/default/objects/ScenarioMessageElement__c/fields/tile_URL__c.field-meta.xml
<CustomField>
    <fullName>tile_URL__c</fullName>
    <defaultValue>&quot;#&quot;</defaultValue>
    <label>tile_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>