force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Badge.recordType-meta.xml
<RecordType>
    <fullName>Badge</fullName>
    <active>true</active>
    <description>A colored badge to highlight an information</description>
    <label>Badge</label>
</RecordType>