force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Button.recordType-meta.xml
<RecordType>
    <fullName>Button</fullName>
    <active>true</active>
    <description>A clickable button starting a flow or redirecting the user</description>
    <label>Button</label>
</RecordType>