force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Datatable.recordType-meta.xml
<RecordType>
    <fullName>Datatable</fullName>
    <active>true</active>
    <description>A table to show detailed data</description>
    <label>Datatable</label>
</RecordType>