force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/HTML.recordType-meta.xml
<RecordType>
    <fullName>HTML</fullName>
    <active>true</active>
    <description>Create your own element (https://www.lightningdesignsystem.com/components/overview/)</description>
    <label>HTML</label>
</RecordType>