force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Image.recordType-meta.xml
<RecordType>
    <fullName>Image</fullName>
    <active>true</active>
    <description>Shows a picture (height = 100px)</description>
    <label>Image</label>
</RecordType>