force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Loading.recordType-meta.xml
<RecordType>
    <fullName>Loading</fullName>
    <active>true</active>
    <description>A message shown before AI response to simulate loading, calculation, research</description>
    <label>Loading</label>
</RecordType>