force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Redirection.recordType-meta.xml
<RecordType>
    <fullName>Redirection</fullName>
    <active>true</active>
    <description>Salesforce redirection to any page</description>
    <label>Redirection</label>
</RecordType>