force-app/main/default/objects/ScenarioMessageElement__c/recordTypes/Tile.recordType-meta.xml
<RecordType>
    <fullName>Tile</fullName>
    <active>true</active>
    <description>A simple Tile to highlight a Salesforce record</description>
    <label>Tile</label>
</RecordType>